[Travis] bundle exec rake

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
 - rake bootstrap
 script:
 - git remote set-url origin "https://${GH_TOKEN}@github.com/segiddins/segiddins.me.git"
-- rake deploy
+- bundle exec rake deploy
 env:
   global:
     secure: p5+VBsNFXJFwHY/DvohaO60oaCZlbwcTTKalnGu3e3Gj/W8UbYCzF0zUPBrgW9YXfKP0/XHRLjqlK5Y2aVKYIh60VzyjTnm6VHg5XlAnTyEMSneOh6kjzK78KVANWLNJMgKXDMzZs5BcyTl5/eRXDi7Koy+SGlEY8AHikSRgt5g=
